resolve logic with openApi response models